[package]
name = "cojson-core"
version = "0.1.0"
edition = "2021"

[dependencies]
lzy = { path = "../lzy" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
blake3 = "1.5"
salsa20 = "0.10.2"
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
bs58 = "0.5"
base64 = "0.22"
signature = { version = "2.2.0" }
rand_core = { version = "0.6.4", features = ["getrandom"] }
base64ct = "=1.6.0"
cipher = "=0.4.4"
universal-hash = "=0.5.0"
